[gd_scene load_steps=7 format=2]

[ext_resource path="res://VideoJuego/Interfaz/contenedorVidas.tscn" type="PackedScene" id=1]
[ext_resource path="res://VideoJuego/Interfaz/contenedorLlaves.tscn" type="PackedScene" id=2]
[ext_resource path="res://VideoJuego/Interfaz/contenedorMonedaOro.tscn" type="PackedScene" id=3]
[ext_resource path="res://VideoJuego/Interfaz/contenedorMonedasBronce.tscn" type="PackedScene" id=4]
[ext_resource path="res://VideoJuego/Interfaz/contenedorMonedaPlata.tscn" type="PackedScene" id=5]
[ext_resource path="res://VideoJuego/Interfaz/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.33484
margin_top = -2.66968
margin_right = 1.33484
margin_bottom = -2.66968
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 214.323, 13.3678 ],
"_edit_use_anchors_": false
}

[node name="contenedorMonedasBronce" parent="." instance=ExtResource( 4 )]
margin_left = 1144.52
margin_top = 18.4656
margin_right = 1257.52
margin_bottom = 71.4656

[node name="contenedorMonedaPlata" parent="." instance=ExtResource( 5 )]
margin_left = 1146.88
margin_top = 89.5102
margin_right = 1259.88
margin_bottom = 142.51

[node name="contenedorMonedaOro" parent="." instance=ExtResource( 3 )]
margin_left = 1147.5
margin_top = 162.821
margin_right = 1260.5
margin_bottom = 215.821

[node name="contenedorVidas" parent="." instance=ExtResource( 1 )]
margin_left = 14.7239
margin_top = 22.4746
margin_right = 148.724
margin_bottom = 76.4746

[node name="contenedorLlaves" parent="." instance=ExtResource( 2 )]
margin_left = 16.9897
margin_top = 105.943
margin_right = 150.99
margin_bottom = 159.943
